made changes in sample data

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CgiPrintEnv.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CgiPrintEnv.yaml
@@ -36,4 +36,4 @@ validate:
       - 'OPENSSL_CONF'
       - 'REMOTE_ADDR'
       - 'SERVER_ADMIN'
-      - 'Environment Variables:'
+      - 'Environment Variables'
