--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CircleciConfig.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/CircleciConfig.yaml
@@ -32,4 +32,6 @@ validate:
   response_code:
     eq: 200
   response_payload:
-    regex: ^(?=.*^version:.*)(?=.*jobs:.*)
+    contains_all:
+      - 'version'
+      - 'jobs'
