--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FirebaseConfigExposure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/FirebaseConfigExposure.yaml
@@ -38,7 +38,7 @@ validate:
     eq: 200
   response_payload:
     contains_all:
-      - "apiKey:"
-      - "authDomain:"
-      - "databaseURL:"
-      - "storageBucket:"
+      - "apiKey"
+      - "authDomain"
+      - "databaseURL"
+      - "storageBucket"
