--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OracleEbsCredentials.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/OracleEbsCredentials.yaml
@@ -34,7 +34,7 @@ validate:
     eq: 200
   response_payload:
     contains_all:
-      - "password="
+      - "password"
       - "<PUSR_LIST>"
   response_headers:
     for_one:
