--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SftpConfigExposure.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SftpConfigExposure.yaml
@@ -34,7 +34,7 @@ validate:
     eq: 200
   response_payload:
     contains_all:
-      - '"host":'
-      - '"user":'
-      - '"password":'
-      - '"remote_path":'
+      - 'host'
+      - 'user'
+      - 'password'
+      - 'remote_path'
