--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SonarqubePublicProjects.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/SonarqubePublicProjects.yaml
@@ -32,6 +32,6 @@ validate:
     eq: 200
   response_payload:
     contains_all:
-      - '"results":'
-      - '"items":'
-      - '"more":'
+      - 'results'
+      - 'items'
+      - 'more'
