--- a/apps/dashboard/web/WEB-INF/web.xml
+++ b/apps/dashboard/web/WEB-INF/web.xml
@@ -137,6 +137,17 @@
     </filter-mapping>
 
     <filter>
+        <filter-name>ForbiddenEndpointsFilter</filter-name>
+        <filter-class>com.akto.filter.ForbiddenEndpointsFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>ForbiddenEndpointsFilter</filter-name>
+        <url-pattern>*</url-pattern>
+    </filter-mapping>
+
+
+    <filter>
         <filter-name>LoggingFilter</filter-name>
         <filter-class>com.akto.filter.LoggingFilter</filter-class>
     </filter>
