--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -59,6 +59,11 @@ jobs:
       - name: Prepare Dashboard UI
         working-directory: ./apps/dashboard/
         run: npm install && npm run build
+      - uses: actions/checkout@v1
+      - name: Install dependencies
+        run: yarn
+      - name: Build
+        run: yarn build
       - name: Prepare dashboard on s3
         uses: lbertenasco/s3-deploy@v1
         with:
