--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config web/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config web/webpack.config.js",
+    "build": "cross-env NODE_ENV=production VERSION=$RELEASE_VERSION webpack --progress --hide-modules --config web/webpack.config.js",
     "hot": "webpack --watch --progress --config web/webpack.config.js"
   },
   "dependencies": {
