--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -64,7 +64,7 @@ jobs:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
-          aws-region: ${{secrets.AWS_REGION}}
+          aws-region: ap-south-1
 
       - name: Deploy static site to S3 bucket
         if: ${{ github.event.inputs.Environment == 'prod' }}
