--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -63,7 +63,7 @@ jobs:
         with:
           aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
           aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
+          aws-session-token: ${{secrets.AWS_ACCESS_TOKEN}}
           aws-region: ap-south-1
 
       - name: Deploy static site to S3 bucket
