--- a/apps/dashboard/polaris_web/package.json
+++ b/apps/dashboard/polaris_web/package.json
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --config web/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --config web/webpack.config.js",
+    "build": "cross-env NODE_ENV=production VERSION=$RELEASE_VERSION webpack --progress --hide-modules --config web/webpack.config.js",
     "hot": "cross-env NODE_ENV=development webpack --watch --progress --config web/webpack.config.js"
   },
   "eslintConfig": {
