--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -19,6 +19,7 @@
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
     "html-react-parser": "^4.0.0",
+    "immer": "^10.0.2",
     "monaco-editor": "^0.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
