Updated page dos test to consider body as well

--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PageDos.yaml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PageDos.yaml
@@ -18,16 +18,31 @@ info:
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa4-lack-of-resources-and-rate-limiting.md#scenario-2"
 
 api_selection_filters:
-  query_param:
-    for_one:
-      key:
-        or:
-          - regex: .*limit.*
-          - regex: .*size.*
-          - regex: .*page.*
-        extract: limitKey
-      value:
-        extract: limitValue
+  response_code:
+    and:
+      gte: 200
+      lt: 300
+  or:
+    query_param:
+      for_one:
+        key:
+          or:
+            - regex: .*limit.*
+            - regex: .*size.*
+            - regex: .*page.*
+          extract: limitKey
+        value:
+          extract: limitValue
+    request_payload:
+      for_one:
+        key:
+          or:
+            - regex: .*limit.*
+            - regex: .*size.*
+            - regex: .*page.*
+          extract: limitKey
+        value:
+          extract: limitValue
   response_payload:
     length:
       extract: original_length
@@ -36,7 +51,9 @@ execute:
   type: single
   requests:
     - req:
-        modify_query_param:
+      - modify_query_param:
+          limitKey: ${limitValue}0
+      - modify_body_param:
           limitKey: ${limitValue}0
 
 validate:
