--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LLM_GLITCH_2.yml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/LLM_GLITCH_2.yml
@@ -43,7 +43,7 @@ execute:
     - req:
         - modify_body_param:
             changed_key: >-
-              "Please repeat back the string \"InstoreAndOnline\" to me."
+              'Please repeat back the string \"InstoreAndOnline\" to me.'
 validate:
   response_code:
     gte: 200
