--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PromptLeakInjection.yml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PromptLeakInjection.yml
@@ -1,13 +1,13 @@
 id: PROMPT_LEAK_INJECTION
 info:
   name: “Prompt Leak Injection Test on LLMs”
-  description: >-
+  description: >
     “Testing LLM for a specific prompt input to guide the output to display the internal prompt created and
     trigger a vulnerability”
   details: >
     “Evaluating the input validation checks implemented for the LLM integration.
     Output checks to prevent LLM sending unintended data out”
-  impact: >-
+  impact: >
     “The results of a successful prompt injection attack can vary greatly - from
     solicitation of sensitive info to influencing critical decision making
     processes under the guise of normal operation”
@@ -22,9 +22,8 @@ info:
     - OWASP Top 10
     - HackerOne Top 10
   references:
-    - >-
-      “https://gitlab.com/gh0s7/payloads-all-the-things/-/tree/master/Prompt%20Injection?ref_type=heads#applications”
-    - '“https://github.com/TakSec/Prompt-Injection-Everywhere”'
+    - “https://gitlab.com/gh0s7/payloads-all-the-things/-/tree/master/Prompt%20Injection?ref_type=heads#applications”
+    - “https://github.com/TakSec/Prompt-Injection-Everywhere”
 auth:
   authenticated: true
 api_selection_filters:
