--- a/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PromptInjectionXSSTest.yml
+++ b/apps/dashboard/src/main/resources/inbuilt_test_yaml_files/PromptInjectionXSSTest.yml
@@ -1,16 +1,16 @@
 id: PROMPT_INJECTION_XSS
 info:
-  name: “Prompt Injection Test on LLMs for XSS”
+  name: "Prompt Injection Test on LLMs for XSS"
   description: >
-    “Testing LLM for a random prompt input with XSS to guide the output for cross site scripting and
-    trigger a vulnerability”
+    "Testing LLM for a random prompt input with XSS to guide the output for cross site scripting and
+    trigger a vulnerability"
   details: >
-    “Evaluating the input validation checks implemented for the LLM integration.
-    Output checks to prevent LLM sending unintended data out”
+    "Evaluating the input validation checks implemented for the LLM integration.
+    Output checks to prevent LLM sending unintended data out"
   impact: >
-    “The results of a successful prompt injection attack can vary greatly - from
+    "The results of a successful prompt injection attack can vary greatly - from
     solicitation of sensitive info to influencing critical decision making
-    processes under the guise of normal operation”
+    processes under the guise of normal operation"
   category:
     name: LLM
     shortName: LLM
@@ -22,8 +22,8 @@ info:
     - OWASP Top 10
     - HackerOne Top 10
   references:
-    - “https://gitlab.com/gh0s7/payloads-all-the-things/-/tree/master/Prompt%20Injection?ref_type=heads#applications”
-    - “https://github.com/TakSec/Prompt-Injection-Everywhere”
+    - "https://gitlab.com/gh0s7/payloads-all-the-things/-/tree/master/Prompt%20Injection?ref_type=heads#applications"
+    - "https://github.com/TakSec/Prompt-Injection-Everywhere"
 auth:
   authenticated: true
 api_selection_filters:
