--- a/.github/workflows/beamerAndDiscord.yml
+++ b/.github/workflows/beamerAndDiscord.yml
@@ -67,3 +67,76 @@ jobs:
           echo "Description: ${{ steps.get_latest_release.outputs.release_notes }}"
 
      
+
+      - name: Push Release Notes to Beamer
+        env:
+          BEAMER_API_TOKEN: ${{ secrets.BEAMER_API_KEY }}
+          RELEASE_TAG: ${{ steps.get_latest_release.outputs.tag_name }}
+          RELEASE_NOTES: ${{ steps.get_latest_release.outputs.release_notes}}
+        run: |
+          # Push release notes to Beamer
+          curl --request POST \
+            --url https://api.getbeamer.com/v0/posts \
+            --header "Content-Type: application/json" \
+            --header "Beamer-Api-Key: $BEAMER_API_TOKEN" \
+            --data "{
+              \"title\": [ \"Release $RELEASE_TAG\" ],
+              \"content\": [ \"$RELEASE_NOTES\" ],
+              \"category\": \"new\",
+              \"publish\": true
+            }"
+            
+  notify_discord:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Get Latest Release
+        id: get_latest_release
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install requests
+          python3 - <<EOF
+          import os
+          import requests
+          import json
+
+          github_token = os.getenv('GITHUB_TOKEN')
+          repo_owner = 'akto-api-security'
+          repo_name = 'akto'
+          headers = {'Authorization': f'Bearer {github_token}'}
+          url = f'https://api.github.com/repos/{repo_owner}/{repo_name}/releases/tags/vv1.30.0'
+          response = requests.get(url, headers=headers)
+          data = response.json()
+          tag = data.get('tag_name')
+          description = data.get('body')
+          # Replace anything after "by" in each line with a "."
+          if description:
+              description_lines = description.split('\n')
+              for i in range(len(description_lines)):
+                  if 'by' in description_lines[i]:
+                      description_lines[i] = description_lines[i].split('by', 1)[0].strip() + '.'
+                  if "'" in description_lines[i]:
+                      description_lines[i] = description_lines[i].replace("'", "''")
+              # Remove the last line from the description
+              description_lines = description_lines[:-1]
+              description = '\n'.join(description_lines) 
+          print(f"::set-output name=tag::{tag}")
+          print(f"::set-output name=description::{json.dumps(description)}")
+          EOF
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Send release message to Discord
+        run: |
+          curl -X POST -H "Content-Type: application/json" -d '{
+            "content": "",
+            "embeds": [
+              {
+                "title": "Release ${{ steps.get_latest_release.outputs.tag }}",
+                "description": ${{ steps.get_latest_release.outputs.description }}
+              }
+            ]
+          }' ${{ secrets.DISCORD_WEBHOOK_URL }}
