--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -84,10 +84,10 @@ jobs:
           cd ../testing
           docker buildx build --platform linux/arm64/v8,linux/amd64 -t $ECR_REGISTRY/akto-api-testing:$IMAGE_TAG $IMAGE_TAG_TESTING . --push
           echo "::set-output name=image::$ECR_REGISTRY/akto-api-testing:$IMAGE_TAG"       
-      - name: Update flash staging
-        if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
-        run: |
-          curl https://flash.staging.akto.io/api/takeUpdate -H X-API-KEY:${{secrets.AKTO_API_KEY}}
+      # - name: Update flash staging
+      #   if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
+      #   run: |
+      #     curl https://flash.staging.akto.io/api/takeUpdate -H X-API-KEY:${{secrets.AKTO_API_KEY}}
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -104,11 +104,32 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Run CI/CD tests
-        if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
-        uses: oren-akto/akto-github-action@v1.0.0
-        with:
-          AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
-          AKTO_API_KEY: ${{vars.AKTO_API_KEY}}
-          AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
-          START_TIME_DELAY: 180
+
+      # Run QA tests
+
+      # Wait for staging environment to be setup 
+      - name: Sleep for 3 minutes
+        run: sleep 3m
+        shell: bash
+
+      - name: Run testsigma end to end tests
+        env:
+          TESTSIGMA_API_KEY: ${{ secrets.TESTSIGMA_API_KEY }}
+          #TESTSIGMA_TEST_PLAN_ID: ${{ vars.TESTSIGMA_TESTPLAN_ID }}
+          TESTSIGMA_TEST_PLAN_ID: 763
+          TS_DASHBOARD_URL: ${{vars.TS_DASHBOARD_URL}}
+        run: bash ./.github/workflows/akto-testsigma.sh
+
+      # - name: Run Akto CI/CD tests
+      #   uses: akto-api-security/run-scan@v1.0.3
+      #   with:
+      #     AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+      #     AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
+      #     AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+
+      # - name: Check for Akto test completion
+      #   env:
+      #     AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+      #     AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
+      #     AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+      #   run: bash ./.github/workflows/akto-cicd.sh
