qa workflow changes

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -121,11 +121,35 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Run CI/CD tests
+      
+      # Run QA tests
+
+      # Wait for staging environment to be setup 
+      - name: Sleep for 3 minutes
+        run: sleep 3m
+        shell: bash
+
+      - name: Run testsigma end to end tests
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
-        uses: oren-akto/akto-github-action@v1.0.0
-        with:
-          AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
-          AKTO_API_KEY: ${{vars.AKTO_API_KEY}}
-          AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
-          START_TIME_DELAY: 180
+        env:
+          TESTSIGMA_API_KEY: ${{ secrets.TESTSIGMA_API_KEY }}
+          #TESTSIGMA_TEST_PLAN_ID: ${{ vars.TESTSIGMA_TESTPLAN_ID }}
+          TESTSIGMA_TEST_PLAN_ID: 763
+          TS_DASHBOARD_URL: ${{vars.TS_DASHBOARD_URL}}
+        run: bash ./.github/workflows/akto-testsigma.sh
+
+      # - name: Run Akto CI/CD tests
+      #   if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
+      #   uses: akto-api-security/run-scan@v1.0.3
+      #   with:
+      #     AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+      #     AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
+      #     AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+
+      # - name: Check for Akto test completion
+      #   if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
+      #   env:
+      #     AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+      #     AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
+      #     AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+      #   run: bash ./.github/workflows/akto-cicd.sh
