updating prod cdn and s3 bucket for deploying to master

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -42,9 +42,9 @@ jobs:
           aws-region: ap-south-1
 
       - name: Deploy static site to S3 bucket
-        run: aws s3 sync ./apps/dashboard/web/dist s3://my-cdn-test-bucket/web/${{github.event.inputs.release_version}}/dist --delete
+        run: aws s3 sync ./apps/dashboard/web/dist s3://dashboard-on-cdn/web/${{github.event.inputs.release_version}}/dist --delete
       - name: Deploy polaris site to S3 bucket
-        run: aws s3 sync ./apps/dashboard/web/polaris_web/web/dist s3://my-cdn-test-bucket/polaris_web/${{github.event.inputs.release_version}}/dist --delete
+        run: aws s3 sync ./apps/dashboard/web/polaris_web/web/dist s3://dashboard-on-cdn/polaris_web/${{github.event.inputs.release_version}}/dist --delete
       - run: mvn package -Dakto-image-tag=${{ github.event.inputs.release_version }} -Dakto-build-time=$(eval "date +%s") -Dakto-release-version=${{github.event.inputs.release_version}}
       - name: DockerHub login
         env:
