--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -134,18 +134,18 @@ jobs:
           TS_DASHBOARD_URL: ${{vars.TS_DASHBOARD_URL}}
         run: bash ./.github/workflows/akto-testsigma.sh
 
-      # - name: Run Akto CI/CD tests
-      #   if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
-      #   uses: akto-api-security/run-scan@v1.0.3
-      #   with:
-      #     AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
-      #     AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
-      #     AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+      - name: Run Akto CI/CD tests
+        if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
+        uses: akto-api-security/run-scan@v1.0.3
+        with:
+          AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+          AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
+          AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
 
-      # - name: Check for Akto test completion
-      #   if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
-      #   env:
-      #     AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
-      #     AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
-      #     AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
-      #   run: bash ./.github/workflows/akto-cicd.sh
+      - name: Check for Akto test completion
+        if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
+        env:
+          AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+          AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
+          AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+        run: bash ./.github/workflows/akto-cicd.sh
