--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -138,14 +138,14 @@ jobs:
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
         uses: akto-api-security/run-scan@v1.0.3
         with:
-          AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+          AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
-          AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+          AKTO_TEST_ID: 64f025c28858442a897032c3
 
       - name: Check for Akto test completion
         if: ${{ github.event.inputs.Environment == 'prod' && github.event.inputs.Deploy == 'true' }}
         env:
-          AKTO_DASHBOARD_URL: ${{secrets.AKTO_DASHBOARD_URL}}
+          AKTO_DASHBOARD_URL: ${{vars.AKTO_DASHBOARD_URL}}
           AKTO_API_KEY: ${{secrets.AKTO_API_KEY}}
-          AKTO_TEST_ID: ${{vars.AKTO_TEST_ID}}
+          AKTO_TEST_ID: 64f025c28858442a897032c3
         run: bash ./.github/workflows/akto-cicd.sh
